Fix menu drawer positioning by adjusting top property to 0 for better alignment

--- a/assets/base.css
+++ b/assets/base.css
@@ -2566,7 +2566,7 @@ input[type='checkbox'] {
 
 .header__icon--menu[aria-expanded='true']::before {
   content: '';
-  top: 100%;
+  top: 0;
   left: 0;
   height: calc(var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%)));
   width: 100%;
@@ -2902,6 +2902,8 @@ details-disclosure > details {
 .overflow-hidden-tablet,
 .overflow-hidden-desktop {
   overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 
 @media screen and (min-width: 750px) {
