--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: calc(100vh - 100%);
   height: calc(var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%)));
-  top: 100%;
+  top: 0;
   left: 0;
   background: rgba(var(--color-foreground), 0.5);
   opacity: 0;
